<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:descendantFocusability="blocksDescendants">

    <TextView
        android:id="@+id/setting_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/mandorin_font"
        android:text="@string/audio_settings_2"
        android:textColor="@color/blue_700"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/setting_info_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/mandorin_font"
        android:text="@string/audio_settings_2_1"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setting_info" />

    <TextView
        android:id="@+id/setting_info_1_ans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/mandorin_font"
        android:text="@string/PLACEHOLDER"
        android:textColor="@color/ant_gray"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setting_info_1" />

    <TextView
        android:id="@+id/setting_info_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/mandorin_font"
        android:text="@string/audio_settings_2_2"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setting_info_1_ans" />

    <TextView
        android:id="@+id/setting_info_2_ans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/mandorin_font"
        android:text="@string/PLACEHOLDER"
        android:textColor="@color/ant_gray"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setting_info_2" />

    <TextView
        android:id="@+id/setting_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/mandorin_font"
        android:text="@string/audio_settings_1"
        android:textColor="@color/blue_700"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setting_info_2_ans" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/theme_switcher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/mandorin_font"
        android:text="@string/audio_settings_1_1"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setting_theme" />

    <TextView
        android:id="@+id/setting_backup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/mandorin_font"
        android:text="@string/audio_settings_4"
        android:textColor="@color/blue_700"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/theme_switcher" />

    <Button
        android:id="@+id/button_backup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/mandorin_font"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/audio_settings_4_1"
        android:textAllCaps="false"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setting_backup" />

</androidx.constraintlayout.widget.ConstraintLayout>