<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:descendantFocusability="blocksDescendants">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_achannel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="4dp"
        app:cardElevation="15dp"
        app:cardMaxElevation="20dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13sp"
            android:layout_marginTop="13sp"
            android:fontFamily="@font/mandorin_font"
            android:text="@string/audio_base_3"
            android:textColor="@color/blue_500"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/mandorin_font"
            android:text="@string/audio_channel_count"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/audio_channel_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|top"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="60dp"
            android:fontFamily="@font/mandorin_font"
            android:text="@string/PLACEHOLDER"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginTop="90dp"
            android:fontFamily="@font/mandorin_font"
            android:text="@string/audio_channel_mask"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/audio_channel_mask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|top"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="60dp"
            android:fontFamily="@font/mandorin_font"
            android:text="@string/PLACEHOLDER"
            android:textSize="15sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_ahal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="4dp"
        app:cardElevation="15dp"
        app:cardMaxElevation="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_achannel">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13sp"
            android:layout_marginTop="13sp"
            android:fontFamily="@font/mandorin_font"
            android:text="@string/audio_base_2"
            android:textColor="@color/blue_500"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginTop="55dp"
            android:fontFamily="@font/mandorin_font"
            android:text="@string/audio_sample_rate"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/audio_sample_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|top"
            android:layout_marginTop="55dp"
            android:layout_marginEnd="60dp"
            android:fontFamily="@font/mandorin_font"
            android:text="@string/PLACEHOLDER"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginTop="85dp"
            android:fontFamily="@font/mandorin_font"
            android:text="@string/audio_hal_frame"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/audio_hal_frame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|top"
            android:layout_marginTop="85dp"
            android:layout_marginEnd="60dp"
            android:fontFamily="@font/mandorin_font"
            android:text="@string/PLACEHOLDER"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginTop="115dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/mandorin_font"
            android:text="@string/audio_hal_format"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/audio_hal_format"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|top"
            android:layout_marginTop="115dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/mandorin_font"
            android:text="@string/PLACEHOLDER"
            android:textSize="15sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_aformat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="4dp"
        app:cardElevation="15dp"
        app:cardMaxElevation="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_ahal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13sp"
            android:layout_marginTop="13sp"
            android:fontFamily="@font/mandorin_font"
            android:text="@string/audio_base_4"
            android:textColor="@color/blue_500"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/mandorin_font"
            android:text="@string/audio_format"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/audio_format"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|top"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="60dp"
            android:fontFamily="@font/mandorin_font"
            android:text="@string/PLACEHOLDER"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginTop="90dp"
            android:fontFamily="@font/mandorin_font"
            android:text="@string/audio_frame"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/audio_frame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|top"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="60dp"
            android:fontFamily="@font/mandorin_font"
            android:text="@string/PLACEHOLDER"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginTop="120dp"
            android:fontFamily="@font/mandorin_font"
            android:text="@string/audio_flags"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/audio_flags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|top"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="60dp"
            android:fontFamily="@font/mandorin_font"
            android:text="@string/PLACEHOLDER"
            android:textSize="15sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_asession"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="4dp"
        app:cardElevation="15dp"
        app:cardMaxElevation="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_aformat">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13sp"
            android:layout_marginTop="13sp"
            android:fontFamily="@font/mandorin_font"
            android:text="@string/audio_base_5"
            android:textColor="@color/blue_500"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="65dp"
            android:fontFamily="@font/mandorin_font"
            android:text="@string/audio_effects"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_audio_dsp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="105dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/ripple_effect"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/mandorin_font"
            android:text="@string/audio_btn_info"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|top"
            android:layout_marginTop="65dp"
            android:layout_marginEnd="60dp"
            android:fontFamily="@font/mandorin_font"
            android:text="@string/audio_session"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_audio_session"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|top"
            android:layout_marginTop="105dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/ripple_effect"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/mandorin_font"
            android:text="@string/audio_btn_info"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_astate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="4dp"
        app:cardElevation="15dp"
        app:cardMaxElevation="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_asession">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13sp"
            android:layout_marginTop="13sp"
            android:fontFamily="@font/mandorin_font"
            android:text="@string/audio_base"
            android:textColor="@color/blue_500"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/mandorin_font"
            android:text="@string/audio_out"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/audio_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|top"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="60dp"
            android:fontFamily="@font/mandorin_font"
            android:text="@string/PLACEHOLDER"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginTop="90dp"
            android:fontFamily="@font/mandorin_font"
            android:text="@string/audio_io_process"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/audio_pid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|top"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="60dp"
            android:fontFamily="@font/mandorin_font"
            android:text="@string/PLACEHOLDER"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginTop="120dp"
            android:fontFamily="@font/mandorin_font"
            android:text="@string/audio_standby"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/audio_standby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|top"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="60dp"
            android:fontFamily="@font/mandorin_font"
            android:text="@string/PLACEHOLDER"
            android:textSize="15sp" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>